--- a/src/styles/components/checkbox.less
+++ b/src/styles/components/checkbox.less
@@ -3,6 +3,7 @@
   color: rgba(0,0,0,0.65);
   font-size: 14px;
   display: inline-block;
+  cursor: pointer;
 }
 .ca-checkbox {
   position: relative;
@@ -11,6 +12,27 @@
   line-height: 1;
   white-space: nowrap;
   top: -0.09em;
+  &-checked {
+    .ca-checkbox-content {
+      background-color: #1890ff;
+      border-color: #1890ff;
+      &:after {
+        opacity: 1;
+      }
+    }
+  }
+  &-disabled {
+    & + span {
+      color: rgba(0,0,0,0.25);
+    }
+    .ca-checkbox-content {
+      background-color: #f5f5f5;
+      border-color: #d9d9d9;
+      &:after {
+        border-color: #ccc;
+      }
+    }
+  }
   &-input {
     position: absolute;
     top: 0;
@@ -32,8 +54,33 @@
     background-color: #fff;
     border: 1px solid #d9d9d9;
     border-radius: 2px;
+    transition: all 0.3s;
+    &:after {
+      content: ' ';
+      position: absolute;
+      width: 4px;
+      height: 8px;
+      border: 2px solid #fff;
+      top: 50%;
+      left: 22%;
+      border-top: 0;
+      opacity: 0;
+      border-left: 0;
+      transform: rotate(45deg) scale(1,1) translate(-50%, -50%);
+      transition: all 0.3s;
+    }
   }
   & + span {
     padding: 0 8px;
+    transition: all 0.3s;
+  }
+}
+.ca-checkbox-group {
+  display: inline-block;
+  .ca-checkbox-group-item {
+    margin-right: 8px;
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
