--- a/src/styles/components/datepicker.less
+++ b/src/styles/components/datepicker.less
@@ -40,6 +40,8 @@
     line-height: 40px;
     text-align: center;
     position: relative;
+    border-bottom: 1px solid #d9d9d9;
+    user-select: none;
     .ca-date-picker-carlendar-prev-year-btn {
       position: absolute;
       left: 7px;
@@ -52,7 +54,7 @@
         width: 6px;
         height: 6px;
         vertical-align: middle;
-        border: 0 solid #666;
+        border: 0 solid #ccc;
         border-width: 2px 0 0 2px;
         border-radius: 1px;
         transform: rotate(-45deg) scale(0.8);
@@ -67,7 +69,7 @@
         width: 6px;
         height: 6px;
         vertical-align: middle;
-        border: 0 solid #666;
+        border: 0 solid #ccc;
         border-width: 2px 0 0 2px;
         border-radius: 1px;
         transform: rotate(-45deg) scale(0.8);
@@ -87,7 +89,7 @@
         width: 6px;
         height: 6px;
         vertical-align: middle;
-        border: 0 solid #666;
+        border: 0 solid #ccc;
         border-width: 2px 0 0 2px;
         border-radius: 1px;
         transform: rotate(-45deg) scale(0.8);
@@ -108,7 +110,7 @@
         width: 6px;
         height: 6px;
         vertical-align: middle;
-        border: 0 solid #666;
+        border: 0 solid #ccc;
         border-width: 2px 0 0 2px;
         border-radius: 1px;
         transform: rotate(135deg) scale(0.8);
@@ -122,7 +124,7 @@
         width: 6px;
         height: 6px;
         vertical-align: middle;
-        border: 0 solid #666;
+        border: 0 solid #ccc;
         border-width: 2px 0 0 2px;
         border-radius: 1px;
         transform: rotate(135deg) scale(0.8);
@@ -142,7 +144,7 @@
         width: 6px;
         height: 6px;
         vertical-align: middle;
-        border: 0 solid #666;
+        border: 0 solid #ccc;
         border-width: 2px 0 0 2px;
         border-radius: 1px;
         transform: rotate(135deg) scale(0.8);
@@ -159,6 +161,47 @@
         line-height: 40px;
       }
       
+    }
+  }
+  &-carlendar-body {
+    padding: 8px 12px;
+    &-table {
+      text-align: center;
+      width: 100%;
+      border: 0;
+    }
+    &-th {
+      height: 30px;
+    }
+    &-day {
+      text-align: center;
+      height: 30px;
+      padding: 3px 0;
+      &-text {
+        color: rgba(0,0,0,0.65);
+        width: 24px;
+        height: 24px;
+        margin: 0 auto;
+        line-height: 24px;
+        cursor: pointer;
+        border-radius: 2px;
+        border: 1px solid transparent;
+        transition: all 0.3s;
+        &.selected {
+          color: #1890ff;
+          border-color: #1890ff;
+          font-weight: bold;
+        }
+        &.actived {
+          background-color: #bae7ff;
+        }
+        &:hover {
+          background-color: #e6f7ff;
+        }
+      }
+    }
+    &-text-gray {
+      color: rgba(0,0,0,0.25);
     }
   }
 }
