--- a/src/styles/components/datepicker.less
+++ b/src/styles/components/datepicker.less
@@ -63,7 +63,6 @@
         border-width: 2px 0 0 2px;
         border-radius: 1px;
         transform: rotate(-45deg) scale(0.8);
-        transition: all 0.3s;
         content: '';
       }
       &:after {
@@ -78,7 +77,6 @@
         border-width: 2px 0 0 2px;
         border-radius: 1px;
         transform: rotate(-45deg) scale(0.8);
-        transition: all 0.3s;
         content: '';
       }
     }
@@ -98,7 +96,6 @@
         border-width: 2px 0 0 2px;
         border-radius: 1px;
         transform: rotate(-45deg) scale(0.8);
-        transition: all 0.3s;
         content: '';
       }
     }
@@ -119,7 +116,6 @@
         border-width: 2px 0 0 2px;
         border-radius: 1px;
         transform: rotate(135deg) scale(0.8);
-        transition: all 0.3s;
         content: '';
       }
       &:after {
@@ -133,7 +129,6 @@
         border-width: 2px 0 0 2px;
         border-radius: 1px;
         transform: rotate(135deg) scale(0.8);
-        transition: all 0.3s;
         content: '';
       }
     }
@@ -153,7 +148,6 @@
         border-width: 2px 0 0 2px;
         border-radius: 1px;
         transform: rotate(135deg) scale(0.8);
-        transition: all 0.3s;
         content: '';
       }
     }
@@ -242,5 +236,8 @@
   &-carlendar-box {
     float: left;
     width: 50%;
+  }
+  &-range-content {
+    width: 560px;
   }
 }
