--- a/src/styles/components/datepicker.less
+++ b/src/styles/components/datepicker.less
@@ -22,6 +22,20 @@
     background-color: #fff;
     color: rgba(0,0,0,0.65);
   }
+  &-separator {
+    margin: 0 10px;
+  }
+  &-range-input {
+    outline: none;
+    border: none;
+    height: 32px;
+    border: 1px solid #d9d9d9;
+    border-radius: 4px;
+    background-color: #fff;
+    line-height: 1.5;
+    color: rgba(0,0,0,0.65);
+    padding: 4px 11px;
+  }
   &-rili {
     position: absolute;
     top: 50%;
