--- a/src/styles/components/datepicker.less
+++ b/src/styles/components/datepicker.less
@@ -173,4 +173,72 @@
       }
     }
   }
+  &-calendar-body {
+    padding: 8px 12px;
+    &-table {
+      text-align: center;
+      width: 100%;
+      border: 0;
+    }
+    &-th {
+      height: 30px;
+    }
+    &-day {
+      text-align: center;
+      height: 30px;
+      padding: 3px 0;
+      &-text {
+        color: rgba(0,0,0,0.65);
+        width: 24px;
+        height: 24px;
+        margin: 0 auto;
+        line-height: 24px;
+        cursor: pointer;
+        border-radius: 2px;
+        border: 1px solid transparent;
+        transition: all 0.3s;
+        &.selected {
+          background-color: #bae7ff;
+        }
+        &.current {
+          color: #1890ff;
+          border-color: #1890ff;
+          font-weight: bold;
+        }
+        &:hover {
+          background-color: #bae7ff;
+        }
+        // &.clicked {
+        //   color: #fff;
+        //   background-color: #1890ff !important;
+        // }
+        // &.hovered {
+        //   background-color: #e6f7ff;
+        // }
+        // &.actived {
+        //   background-color: #bae7ff;
+        // }
+        // &:hover {
+        //   background-color: #e6f7ff;
+        // }
+      }
+    }
+    &-text-gray {
+      color: rgba(0,0,0,0.25);
+    }
+  }
+  &-calendar-footer {
+    padding: 0 12px;
+    line-height: 38px;
+    height: 38px;
+    border-top: 1px solid #d9d9d9;
+    &-btn {
+      display: block;
+      text-align: center;
+    }
+    &-text {
+      color: #1890ff;
+      cursor: pointer;
+    }
+  }
 }
