--- a/src/styles/components/datepicker.less
+++ b/src/styles/components/datepicker.less
@@ -242,3 +242,240 @@
     }
   }
 }
+.ca-range-picker {
+  display: inline-block;
+  color: rgba(0,0,0,0.65);
+  box-sizing: border-box;
+  font-size: 14px;
+  line-height: 1.5;
+  position: relative;
+  &-input-box {
+    border: 1px solid #d9d9d9;
+    width: 100%;
+    height: 32px;
+    position: relative;
+    border-radius: 4px;
+    background-color: #fff;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 4px 11px;
+  }
+  &-range-input {
+    outline: none;
+    border: none;
+    background-color: transparent;
+    width: 44%;
+    text-align: center;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    color: rgba(0,0,0,0.65);
+  }
+  &-separator {
+    margin: 0 10px;
+  }
+  &-content {
+    width: 560px;
+    background-color: #fff;
+    font-size: 14px;
+    line-height: 1.5;
+    display: inline-block;
+  }
+  &-calendar-part-panel {
+    position: relative;
+  }
+  &-calendar-part-left {
+    width: 50%;
+    float: left;
+    position: relative;
+  }
+  &-calendar-part {
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    position: relative;
+    border-bottom: 1px solid #d9d9d9;
+    user-select: none;
+    .ca-range-picker-calendar-part-prev-year {
+      position: absolute;
+      left: 7px;
+      padding: 0 5px;
+      cursor: pointer;
+      &:before {
+        position: relative;
+        top: -1px;
+        display: inline-block;
+        width: 6px;
+        height: 6px;
+        vertical-align: middle;
+        border: 0 solid #ccc;
+        border-width: 2px 0 0 2px;
+        border-radius: 1px;
+        transform: rotate(-45deg) scale(0.8);
+        content: '';
+      }
+      &:after {
+        position: relative;
+        top: -1px;
+        left: -4px;
+        display: inline-block;
+        width: 6px;
+        height: 6px;
+        vertical-align: middle;
+        border: 0 solid #ccc;
+        border-width: 2px 0 0 2px;
+        border-radius: 1px;
+        transform: rotate(-45deg) scale(0.8);
+        content: '';
+      }
+    }
+    .ca-range-picker-calendar-part-prev-month {
+      position: absolute;
+      left: 29px;
+      padding: 0 5px;
+      cursor: pointer;
+      &:before {
+        position: relative;
+        top: -1px;
+        display: inline-block;
+        width: 6px;
+        height: 6px;
+        vertical-align: middle;
+        border: 0 solid #ccc;
+        border-width: 2px 0 0 2px;
+        border-radius: 1px;
+        transform: rotate(-45deg) scale(0.8);
+        content: '';
+      }
+    }
+    .ca-range-picker-calendar-part-next-year {
+      position: absolute;
+      right: 7px;
+      padding: 0 5px;
+      cursor: pointer;
+      &:before {
+        position: relative;
+        top: -1px;
+        left: 3px;
+        display: inline-block;
+        width: 6px;
+        height: 6px;
+        vertical-align: middle;
+        border: 0 solid #ccc;
+        border-width: 2px 0 0 2px;
+        border-radius: 1px;
+        transform: rotate(135deg) scale(0.8);
+        content: '';
+      }
+      &:after {
+        position: relative;
+        top: -1px;
+        display: inline-block;
+        width: 6px;
+        height: 6px;
+        vertical-align: middle;
+        border: 0 solid #ccc;
+        border-width: 2px 0 0 2px;
+        border-radius: 1px;
+        transform: rotate(135deg) scale(0.8);
+        content: '';
+      }
+    }
+    .ca-range-picker-calendar-part-next-month {
+      position: absolute;
+      padding: 0 5px;
+      right: 29px;
+      cursor: pointer;
+      &:before {
+        position: relative;
+        top: -1px;
+        display: inline-block;
+        width: 6px;
+        height: 6px;
+        vertical-align: middle;
+        border: 0 solid #ccc;
+        border-width: 2px 0 0 2px;
+        border-radius: 1px;
+        transform: rotate(135deg) scale(0.8);
+        content: '';
+      }
+    }
+    .ca-range-picker-calendar-part-content {
+      .ca-range-picker-calendar-part-month , .ca-range-picker-calendar-part-year {
+        display: inline-block;
+        padding: 0 2px;
+        font-weight: 500;
+        color: rgba(0,0,0,0.85);
+        line-height: 40px;
+      }
+    }
+  }
+  &-calendar-body {
+    padding: 8px 12px;
+    &-table {
+      text-align: center;
+      width: 100%;
+      border: 0;
+    }
+    &-th {
+      height: 30px;
+    }
+    &-day {
+      text-align: center;
+      height: 30px;
+      padding: 3px 0;
+      &-text {
+        color: rgba(0,0,0,0.65);
+        width: 24px;
+        height: 24px;
+        margin: 0 auto;
+        line-height: 24px;
+        cursor: pointer;
+        border-radius: 2px;
+        border: 1px solid transparent;
+        transition: all 0.3s;
+        &.selected {
+          background-color: #bae7ff;
+        }
+        &.current {
+          color: #1890ff;
+          border-color: #1890ff;
+          font-weight: bold;
+        }
+        &:hover {
+          background-color: #bae7ff;
+        }
+        // &.clicked {
+        //   color: #fff;
+        //   background-color: #1890ff !important;
+        // }
+        // &.hovered {
+        //   background-color: #e6f7ff;
+        // }
+        // &.actived {
+        //   background-color: #bae7ff;
+        // }
+        // &:hover {
+        //   background-color: #e6f7ff;
+        // }
+      }
+    }
+    &-text-gray {
+      color: rgba(0,0,0,0.25);
+    }
+  }
+  &-calendar-footer {
+    padding: 0 12px;
+    line-height: 38px;
+    height: 38px;
+    border-top: 1px solid #d9d9d9;
+    &-btn {
+      display: block;
+      text-align: center;
+    }
+    &-text {
+      color: #1890ff;
+      cursor: pointer;
+    }
+  }
+}
