--- a/src/styles/components/datepicker.less
+++ b/src/styles/components/datepicker.less
@@ -249,6 +249,18 @@
   font-size: 14px;
   line-height: 1.5;
   position: relative;
+  &-clearable {
+    color: #999;
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 14px;
+    background-color: #fff;
+    transition: all 0.3s;
+    opacity: 0;
+    cursor: pointer;
+  }
   &-input-box {
     border: 1px solid #d9d9d9;
     width: 100%;
@@ -448,7 +460,7 @@
           border: 1px solid transparent;
           transition: all 0.3s;
           &.selected {
-            background-color: #bae7ff;
+            background-color: #1890ff !important;
           }
           &.current {
             color: #1890ff;
