--- a/src/styles/components/datepicker.less
+++ b/src/styles/components/datepicker.less
@@ -442,6 +442,11 @@
       &-th {
         height: 30px;
       }
+      &-day-box {
+        &.hover {
+          background-color: #bae7ff;
+        }
+      }
       &-day {
         text-align: center;
         height: 30px;
@@ -491,6 +496,11 @@
     &-th {
       height: 30px;
     }
+    &-day-box {
+      &.hover {
+        background-color: #bae7ff;
+      }
+    }
     &-day {
       text-align: center;
       height: 30px;
@@ -509,9 +519,6 @@
           transition: all 0.3s;
           background-color: #bae7ff !important;
           color: #fff;
-        }
-        &.hover {
-          background-color: #bae7ff;
         }
         &.current {
           color: #1890ff;
