--- a/src/styles/iconfont/iconfont.css
+++ b/src/styles/iconfont/iconfont.css
@@ -1,16 +1,19 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2468761 */
-  src: url('iconfont.woff2?t=1643179589808') format('woff2'),
-       url('iconfont.woff?t=1643179589808') format('woff'),
-       url('iconfont.ttf?t=1643179589808') format('truetype');
+  src: url('iconfont.woff2?t=1648191434473') format('woff2'),
+       url('iconfont.woff?t=1648191434473') format('woff'),
+       url('iconfont.ttf?t=1648191434473') format('truetype');
 }
-
 .iconfont {
   font-family: "iconfont" !important;
   font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-shijian:before {
+  content: "\e64d";
 }
 
 .icon-rili:before {
@@ -56,7 +59,6 @@
 .icon-success:before {
   content: "\e66b";
 }
-
 .icon-info {
   color: #2d8cf0;
 }
