--- a/src/styles/components/timepicker.less
+++ b/src/styles/components/timepicker.less
@@ -75,6 +75,10 @@
       padding-left: 12px;
       cursor: pointer;
       transition: all 0.3s;
+      &.selected {
+        background-color: #f5f5f5;
+        font-weight: 600;
+      }
       &:hover {
         background-color: #bae7ff;
       }
